# hdx-scraper-wfp-foodprices

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CLAUDE.md  Dockerfile  LICENSE  README.md  admCode.xlsx  crontab  dbfoodprice.py  dbfoodprices.py  docker-compose.yml  docker-requirements.txt  hatch.toml  prefetch.py  pyproject.toml  requirements-test.txt  requirements.txt  run.py  run2.py  run_env  setup.sh  test-requirements.txt  wfp_food_prices.yml  wfpfood.py
.config/: pre-commit-config.yaml
.github/workflows/: build.yml  publish.yaml  run-python-tests.yml
config/: Adm0Code.csv  hdx_dataset_static.yml  hdx_resource_view_static.yml  project_configuration.yaml  project_configuration.yml  smtp_configuration.yml
database/: dbcommodity.py  dbcountry.py  dbmarket.py
saved_data/: MarketPrices_BDI_60.json  MarketPrices_BDI_61.json  MarketPrices_BDI_62.json  MarketPrices_BDI_63.json  MarketPrices_BDI_64.json  MarketPrices_BDI_65.json  MarketPrices_BDI_66.json  MarketPrices_BDI_67.json  MarketPrices_BDI_68.json  MarketPrices_BDI_69.json  MarketPrices_BDI_70.json  MarketPrices_BDI_71.json  MarketPrices_BEN_1.json  MarketPrices_BEN_10.json  MarketPrices_BEN_11.json  MarketPrices_BEN_12.json  MarketPrices_BEN_13.json  MarketPrices_BEN_14.json  MarketPrices_BEN_15.json  MarketPrices_BEN_16.json  MarketPrices_BEN_17.json  MarketPrices_BEN_18.json  MarketPrices_BEN_19.json  MarketPrices_BEN_2.json  MarketPrices_BEN_20.json  MarketPrices_BEN_21.json  MarketPrices_BEN_22.json  MarketPrices_BEN_23.json  MarketPrices_BEN_24.json  MarketPrices_BEN_25.json  MarketPrices_BEN_26.json  MarketPrices_BEN_27.json  MarketPrices_BEN_28.json  MarketPrices_BEN_29.json  MarketPrices_BEN_3.json  MarketPrices_BEN_30.json  MarketPrices_BEN_31.json  MarketPrices_BEN_32.json  MarketPrices_BEN_33.json  MarketPrices_BEN_34.json  (+354 more)
src/: wfpfood.py
src/database/: dbcommodity.py  dbcountry.py  dbfoodprice.py  dbmarket.py
tests/: conftest.py  test_country.py  test_global.py  test_wfpfood.py  test_world.py
tests/config/: project_configuration.yaml  project_configuration.yml
tests/fixtures/: hdx_hapi_commodity_global.csv  hdx_hapi_food_market_global.csv  hdx_hapi_market_global.csv  wfp_commodities_global.csv  wfp_countries_global.csv  wfp_currencies_global.csv  wfp_food_prices_blr.csv  wfp_food_prices_blr_qc.csv  wfp_food_prices_cog.csv  wfp_food_prices_cog_qc.csv  wfp_food_prices_global.csv  wfp_food_prices_nic.csv  wfp_food_prices_nic_qc.csv  wfp_food_prices_pse.csv  wfp_food_prices_pse_qc.csv  wfp_food_prices_syr_qc.csv  wfp_markets_global.csv
tests/fixtures/country/: wfp_food_prices_blr.csv  wfp_food_prices_blr_qc.csv  wfp_food_prices_cog.csv  wfp_food_prices_cog_qc.csv  wfp_food_prices_nic.csv  wfp_food_prices_pse.csv  wfp_food_prices_syr_qc.csv  wfp_markets_blr.csv  wfp_markets_cog.csv  wfp_markets_nic.csv  wfp_markets_pse.csv  wfp_markets_syr.csv
tests/fixtures/global/: hdx_hapi_commodity_global.csv  hdx_hapi_food_price_global_2000.csv  hdx_hapi_food_price_global_2001.csv  hdx_hapi_food_price_global_2002.csv  hdx_hapi_food_price_global_2003.csv  hdx_hapi_food_price_global_2004.csv  hdx_hapi_food_price_global_2005.csv  hdx_hapi_food_price_global_2006.csv  hdx_hapi_food_price_global_2007.csv  hdx_hapi_food_price_global_2008.csv  hdx_hapi_food_price_global_2009.csv  hdx_hapi_food_price_global_2010.csv  hdx_hapi_food_price_global_2011.csv  hdx_hapi_food_price_global_2012.csv  hdx_hapi_food_price_global_2013.csv  hdx_hapi_food_price_global_2014.csv  hdx_hapi_food_price_global_2015.csv  hdx_hapi_food_price_global_2016.csv  hdx_hapi_food_price_global_2017.csv  hdx_hapi_food_price_global_2018.csv  hdx_hapi_food_price_global_2019.csv  hdx_hapi_food_price_global_2024.csv  hdx_hapi_market_global.csv  wfp_commodities_global.csv  wfp_currencies_global.csv  wfp_food_prices_global_2000.csv  wfp_food_prices_global_2001.csv  wfp_food_prices_global_2002.csv  wfp_food_prices_global_2003.csv  wfp_food_prices_global_2004.csv  wfp_food_prices_global_2005.csv  wfp_food_prices_global_2006.csv  wfp_food_prices_global_2007.csv  wfp_food_prices_global_2008.csv  wfp_food_prices_global_2009.csv  wfp_food_prices_global_2010.csv  wfp_food_prices_global_2011.csv  wfp_food_prices_global_2012.csv  wfp_food_prices_global_2013.csv  wfp_food_prices_global_2014.csv  (+11 more)
tests/fixtures/input/: Categories_1.json  Categories_2.json  Commodities_1.json  Commodities_10.json  Commodities_11.json  Commodities_12.json  Commodities_13.json  Commodities_14.json  Commodities_15.json  Commodities_16.json  Commodities_17.json  Commodities_18.json  Commodities_19.json  Commodities_2.json  Commodities_20.json  Commodities_21.json  (+902 more)
wfp/: access_token.py  wfpfood.py
(+141 files in other folders)
