#########################
# Project Configuration #
#########################

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "hdx-scraper-wfp-foodprices"
requires-python = ">=3.13"
dependencies = [
    "hdx-python-api>= 6.4.3",
    "hdx-python-country>= 3.9.4",
    "hdx-python-utilities>= 3.8.7",
    "sigfig",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/OCHA-DAP/hdx-scraper-wfp-foodprices"

[project.optional-dependencies]
test = ["pytest", "pytest-check", "pytest-cov", "cydifflib"]
dev = ["pre-commit"]

[project.scripts]
run_country = "hdx.scraper.wfp.foodprices.country.__main__:main"
run_global = "hdx.scraper.wfp.foodprices.global.__main__:main"
