#########################
# Project Configuration #
#########################

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "hdx-scraper-wfp-foodprices"
requires-python = ">=3.13"
dependencies = [
  "hdx-python-api>= 6.6.5",
  "hdx-python-country>= 4.1.1",
  "hdx-python-utilities>= 4.0.6",
  "sigfig",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/OCHA-DAP/hdx-scraper-wfp-foodprices"

[project.optional-dependencies]
test = ["pytest", "pytest-check", "pytest-cov", "cydifflib"]
dev = ["pre-commit"]

[project.scripts]
run_country = "hdx.scraper.wfp.foodprices.country.__main__:main"
run_global = "hdx.scraper.wfp.foodprices.global.__main__:main"
